codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__paused_queued_send_actions_popup.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: popup
---
  Queued input
  queued steer

› 1. Edit queued input  Revise this input, then save it back to the queue.
  2. Drop from queue    Remove this input without sending it.

  Press enter to confirm or esc to go back
