codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__paused_queued_sends_review_popup.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: popup
---
  Review queued inputs
  Select an input to edit or drop before resuming.

  Queued inputs
› Input 1                   queued steer
  Input 2                   queued follow-up

  Queue actions
  Resume all queued inputs  Continue sending remaining queued inputs.
  Drop all queued inputs    Clear every queued input without sending them.

  Press enter to confirm or esc to go back
