codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__resume_queued_sends_prompt.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: popup
---
  Resume queued sends?
  Queued inputs were paused after a usage limit was reached.

› 1. Keep paused               Leave queued sends paused until you review them later.
  2. Review queued inputs      Edit or drop queued inputs before resuming.
  3. Resume all queued inputs  Continue sending queued inputs.

  Press enter to confirm or esc to go back
